Rules to prevent image from being too big in post view

--- a/stylesheets/posts/all.less
+++ b/stylesheets/posts/all.less
@@ -53,6 +53,11 @@
 		font-size: 1.5rem;
 		line-height: 1.9rem;
 
+		p img{
+			max-width: 100%;
+			height: auto;
+		}
+
 		p:first-of-type{
 			margin-top: 0;
 		}
